# cachica

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: main.yml
cachica/: Dockerfile  README.md  pyproject.toml
cachica/.github/workflows/: ci.yml
cachica/src/cachica/: protocol.py  server.py
cachica/tests/unit/: test_protocol.py
docs/resp/: RESP_protocol_description.md
src/cachica/: client.py  config.py  datastore.py  protocol.py  server.py
tests/integration/: test_datastore_integration.py
tests/load_test/: load_test.py  locustfile.py
tests/unit/: test_datastore.py  test_protocol.py
workflows/: main.yml
