[tool.poetry]
name = "cachica"
version = "0.1.0"
description = ""
authors = ["Aleksa Vidovic <aleksavidovic8@gmail.com>"]
readme = "README.md"
packages = [{include = "cachica", from = "src"}]

# Entry point
[tool.poetry.scripts]
cachica-server = "cachica.server:main"
cachica-client = "cachica.client:main"

[tool.poetry.dependencies]
python = ">=3.11"

[tool.poetry.group.dev.dependencies]
ruff = "^0.12.12"
pytest = "^8.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
# Set the minimum Python version to target for compatibility.
target-version = "py311" # Corrected this to match your python requirement
line-length = 120

[tool.ruff.lint]
# A good starting set of rules:
# E, F: Standard pycodestyle and PyFlakes
# I: isort (import sorting)
# B: flake8-bugbear (finds likely bugs)
# TID: flake8-tidy-imports (enforces clean import structure)
select = ["E", "F", "I", "B", "TID"]

[tool.ruff.format]
# Matches Black's default quoting style.
quote-style = "double"

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = [
    "tests",
]
# Common options:
# -ra: show extra test summary info for all but passed tests
# --strict-markers: raise errors on unknown markers
addopts = "-ra --strict-markers"
